--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </button>
             <div class="navbar-menu">
                 <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="#about">About</a>
                 <a href="#">Services</a>
                 <a href="#">Education</a>
                 <a href="#">Works</a>
@@ -52,20 +52,119 @@
         </div>
     </section>
 
-    <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis dicta est unde 
-        itaque enim at atque consequatur, quas mollitia eaque esse qui praesentium eum voluptatem 
-        magni ipsa. Quos atque modi aperiam nemo nihil, voluptatum tempora, soluta corrupti porro 
-        obcaecati quo. Tempore iure fuga expedita autem voluptatibus. Quaerat necessitatibus consectetur, 
-        sunt error eveniet et velit sit ad architecto voluptates rerum eligendi! Harum nemo nobis quo 
-        odio tempore nam fugiat vitae omnis quisquam magnam. Soluta voluptatum adipisci placeat velit, 
-        veritatis saepe illum reiciendis fuga numquam? Illum odio ducimus hic et minima animi numquam 
-        vel at labore fuga porro beatae facere deserunt impedit sunt id repudiandae magnam quod culpa 
-        consequatur, ipsa reprehenderit, aliquid placeat rerum. Recusandae quas deserunt, excepturi dolor 
-        sit, est itaque laborum eius porro velit ipsa fuga ipsum non quis ratione eaque quae quos explicabo 
-        minus rerum nobis atque? Commodi reiciendis similique adipisci error dolor esse sit laborum cum, 
-        optio asperiores!
-    </p>
+    <!-- About -->
+    <section id="about">
+        <div class="inner-width">
+            <h1 class="section-title">About</h1>
+            <div class="about-content">
+                <img src="images/pic.png" alt="About" class="about-pic">
+                <div class="about-text">
+                    <h2>Hi I'm Bharath Kumar</h2>
+                    <h3>
+                        <span>Developer</span>
+                        <span>Freelancer</span>
+                        <span>Youtuber</span>
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure architecto quam  
+                        eligendi totam ut quo omnis exercitationem ipsam debitis? Beatae quis quos 
+                        doloremque exercitationem ab, quam culpa ipsa porro nisi!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure architecto quam  
+                        eligendi totam ut quo omnis exercitationem ipsam debitis? Beatae quis quos 
+                        doloremque exercitationem ab, quam culpa ipsa porro nisi!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure architecto quam  
+                        eligendi totam ut quo omnis exercitationem ipsam debitis? Beatae quis quos 
+                        doloremque exercitationem ab, quam culpa ipsa porro nisi!
+                    </p>
+                </div>
+            </div>
+
+            <div class="skills">
+                <div class="skill">
+                    <div class="skill-info">
+                        <span>HTML</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="skill-bar html"></div>
+                </div>
+                <div class="skill">
+                    <div class="skill-info">
+                        <span>CSS</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="skill-bar css"></div>
+                </div>
+                <div class="skill">
+                    <div class="skill-info">
+                        <span>JavaScript</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="skill-bar js"></div>
+                </div>
+                <div class="skill">
+                    <div class="skill-info">
+                        <span>Node.js</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="skill-bar nodejs"></div>
+                </div>
+                <div class="skill">
+                    <div class="skill-info">
+                        <span>Python 3</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="skill-bar python3"></div>
+                </div>
+                <div class="skill">
+                    <div class="skill-info">
+                        <span>AWS</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="skill-bar aws"></div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- Services -->
+    <section id="services" class="dark">
+        <div class="inner-width">
+            <h1 class="section-title">Services</h1>
+            <div class="services">
+                <div class="service">
+                    <i class="icon fas fa-paint-brush"></i>
+                    <h4>Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="service">
+                    <i class="icon fas fa-pager"></i>
+                    <h4>Build Websites</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="service">
+                    <i class="icon fas fa-database"></i>
+                    <h4>Manage Databases</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="service">
+                    <i class="icon fab fa-android"></i>
+                    <h4>Develop Andriod Apps</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="service">
+                    <i class="icon fas fa-credit-card"></i>
+                    <h4>UI Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="service">
+                    <i class="icon fas fa-keyboard"></i>
+                    <h4>Edit Texts</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
