--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="navbar-menu">
                 <a href="#">Home</a>
                 <a href="#about">About</a>
-                <a href="#">Services</a>
+                <a href="#services">Services</a>
                 <a href="#">Education</a>
                 <a href="#">Works</a>
                 <a href="#">Contact</a>
