profile pic added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="inner-width">
             <h1 class="section-title">About</h1>
             <div class="about-content">
-                <img src="images/pic.png" alt="About" class="about-pic">
+                <img src="images/bk.JPG" alt="About" class="about-pic">
                 <div class="about-text">
                     <h2>Hi I'm Bharath Kumar</h2>
                     <h3>
