--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <section id="home">
         <div class="inner-width">
             <div class="content">
-                <h1>Hi I'm </h1>
+                <h1>Hi I'm Bharath Kumar</h1>
+                <h2>I'm </h2>
                 <div class="sm">
                     <a href="#" class="fab fa-facebook-f"></a>
                     <a href="#" class="fab fa-twitter"></a>
