--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
         
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    
     <script src="js/script.js"></script>
 </head>
 <body>
@@ -25,9 +28,9 @@
                 <a href="#">Home</a>
                 <a href="#about">About</a>
                 <a href="#services">Services</a>
-                <a href="#">Education</a>
-                <a href="#">Works</a>
-                <a href="#">Contact</a>
+                <a href="#education">Education</a>
+                <a href="#works">Works</a>
+                <a href="#contact">Contact</a>
             </div>
         </div>
     </nav>
@@ -36,8 +39,7 @@
     <section id="home">
         <div class="inner-width">
             <div class="content">
-                <h1>Hi I'm Bharath Kumar</h1>
-                <h2>I'm </h2>
+                <h2>Hi, I'm </h2>
                 <div class="sm">
                     <a href="#" class="fab fa-facebook-f"></a>
                     <a href="#" class="fab fa-twitter"></a>
@@ -166,6 +168,168 @@
             </div>
         </div>
     </section>
+
+    <!-- Education -->
+    <section id="education">
+        <div class="inner-width">
+            <h1 class="section-title">Education & Experiences</h1>
+            <div class="time-line">
+                <div class="block">
+                    <h4>2018 - 2019</h4>
+                    <h3>Software Engineer</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Modi libero sed voluptates sapiente aliquid ratione eligendi 
+                        illum soluta est expedita, sit laudantium ut. Sequi doloribus 
+                        temporibus perferendis ducimus, animi hic.
+                    </p>
+                </div>
+                <div class="block">
+                    <h4>2018 - 2019</h4>
+                    <h3>Software Engineer</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Modi libero sed voluptates sapiente aliquid ratione eligendi 
+                        illum soluta est expedita, sit laudantium ut. Sequi doloribus 
+                        temporibus perferendis ducimus, animi hic.
+                    </p>
+                </div>
+                <div class="block">
+                    <h4>2018 - 2019</h4>
+                    <h3>Software Engineer</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Modi libero sed voluptates sapiente aliquid ratione eligendi 
+                        illum soluta est expedita, sit laudantium ut. Sequi doloribus 
+                        temporibus perferendis ducimus, animi hic.
+                    </p>
+                </div>
+                <div class="block">
+                    <h4>2018 - 2019</h4>
+                    <h3>Software Engineer</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Modi libero sed voluptates sapiente aliquid ratione eligendi 
+                        illum soluta est expedita, sit laudantium ut. Sequi doloribus 
+                        temporibus perferendis ducimus, animi hic.
+                    </p>
+                </div>
+                <div class="block">
+                    <h4>2018 - 2019</h4>
+                    <h3>Software Engineer</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Modi libero sed voluptates sapiente aliquid ratione eligendi 
+                        illum soluta est expedita, sit laudantium ut. Sequi doloribus 
+                        temporibus perferendis ducimus, animi hic.
+                    </p>
+                </div>
+                <div class="block">
+                    <h4>2018 - 2019</h4>
+                    <h3>Software Engineer</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Modi libero sed voluptates sapiente aliquid ratione eligendi 
+                        illum soluta est expedita, sit laudantium ut. Sequi doloribus 
+                        temporibus perferendis ducimus, animi hic.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Works -->
+    <section id="works" class="dark">
+        <div class="inner-width">
+            <h1 class="section-title">Works</h1>
+            <div class="works">
+                <a href="images/works/1.jpg" class="work">
+                    <img src="images/works/1.jpg" alt="">
+                    <div class="info">
+                        <h3>Work Title</h3>
+                        <div class="cat">Music, Headset</div>
+                    </div>
+                </a>
+                <a href="images/works/2.jpg" class="work">
+                    <img src="images/works/2.jpg" alt="">
+                    <div class="info">
+                        <h3>Work Title</h3>
+                        <div class="cat">Music, Headset</div>
+                    </div>
+                </a>
+                <a href="images/works/3.jpg" class="work">
+                    <img src="images/works/3.jpg" alt="">
+                    <div class="info">
+                        <h3>Work Title</h3>
+                        <div class="cat">Music, Headset</div>
+                    </div>
+                </a>
+                <a href="images/works/4.jpg" class="work">
+                    <img src="images/works/4.jpg" alt="">
+                    <div class="info">
+                        <h3>Work Title</h3>
+                        <div class="cat">Music, Headset</div>
+                    </div>
+                </a>
+                <a href="images/works/5.jpg" class="work">
+                    <img src="images/works/5.jpg" alt="">
+                    <div class="info">
+                        <h3>Work Title</h3>
+                        <div class="cat">Music, Headset</div>
+                    </div>
+                </a>
+                <a href="images/works/6.jpg" class="work">
+                    <img src="images/works/6.jpg" alt="">
+                    <div class="info">
+                        <h3>Work Title</h3>
+                        <div class="cat">Music, Headset</div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact">
+        <div class="inner-width">
+            <h1 class="section-title">Get in touch</h1>
+            <div class="contact-info">
+                <div class="item">
+                    <i class="fas fa-mobile-alt"></i>
+                    +91 7896541023
+                </div>
+                <div class="item">
+                    <i class="fas fa-envelope"></i>
+                    bk@bharathkv.com
+                </div>
+                <div class="item">
+                    <i class="fas fa-map-marker-alt"></i>
+                    Karnataka, India
+                </div>
+            </div>
+        </div>
+
+        <form action="#" class="contact-form">
+            <input type="text" class="nameZone" placeholder="Your Full Name">
+            <input type="email" class="emailZone" placeholder="Your Email">
+            <input type="text" class="subjectZone" placeholder="Subject">
+            <textarea class="messageZone" placeholder="Message"></textarea>
+            <input type="submit" class="btn" value="Send Message">
+        </form>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="inner-width">
+            <div class="copyright">
+                &copy; 2020 | Created & Designed by <a href="#">Bharath Kumar V</a>
+            </div>
+            <div class="sm">                
+                <a href="#" class="fab fa-facebook-f"></a>
+                <a href="#" class="fab fa-twitter"></a>
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fab fa-linkedin-in"></a>
+                <a href="#" class="fab fa-youtube"></a>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Go to TOP Button -->
+    <button class="goTop fas fa-arrow-up"></button>
 
 </body>
 </html>
